--- a/index.html
+++ b/index.html
@@ -6,12 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet/html/css/portfolio</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <div class="container">
         <div class="general-framework">
-            <div class="aside">ASIDE</div>
+            <div class="aside">
+                <nav>
+                    <div class="image">
+                        <img src="/assets/images/001.jpg" alt="">
+                        <h1>Paul Sadou </h1>
+                        <p>Web Designer</p>
+                    </div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Me</a></li>
+                        <li><a href="#">Resume</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                    <div class="icons-social">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-google-plus-g"></i>
+                    </div>
+                    <div class="navbar"></div>
+                </nav>
+            </div>
             <div class="home">HOME</div>
         </div>
     </div>
