--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
                     <div class="navbar"></div>
                 </nav>
             </div>
-            <div class="home">HOME</div>
+            <div class="home">
+                <div class="infos">
+                    <header>
+                        <h2>Paul Sadou</h2>
+                        <h3>Frontend-developer</h3><br>
+                        <p1>
+                            <u>Age</u> 35 <br><br>
+                            <u>Address</u> Mongo/Tchad <br><br>
+                            <u>e-mail</u> paulsadou0@gmail.com <br><br>
+                            <u>Phone</u> +235 62 04 16 81 <br><br>
+                            <u>Freelance</u>  Available <br><br>
+                        </p1>
+                    </header>
+                </div>
+            </div>
         </div>
     </div>
 </body>
