--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <p>Web Designer</p>
                     </div>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Me</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about-me.html">About Me</a></li>
                         <li><a href="#">Resume</a></li>
                         <li><a href="#">Portfolio</a></li>
                         <li><a href="#">Contact</a></li>
@@ -38,17 +38,15 @@
             </div>
             <div class="home">
                 <div class="infos">
-                    <header>
-                        <h2>Paul Sadou</h2>
-                        <h3>Frontend-developer</h3><br>
-                        <p1>
-                            <u>Age</u> 35 <br><br>
-                            <u>Address</u> Mongo/Tchad <br><br>
-                            <u>e-mail</u> paulsadou0@gmail.com <br><br>
-                            <u>Phone</u> +235 62 04 16 81 <br><br>
-                            <u>Freelance</u>  Available <br><br>
-                        </p1>
-                    </header>
+                    <h2>Paul Sadou</h2>
+                    <h3>Frontend-developer</h3>
+                    <p>
+                     <u>Age:</u> 35 <br><br>
+                     <u>E-mail:</u> paulsadou0@gmail.com <br><br>
+                     <u>Address:</u> Mongo/Tchad <br><br>
+                     <u>Phone:</u> +235 62 04 16 81 <br><br>
+                     <u>Freelance:</u> Available
+                    </p>
                 </div>
             </div>
         </div>
