--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="general-framework">
             <div class="aside">
                 <nav>
-                    <div class="image">
+                    <div class="slider-nav">
                         <img src="/assets/images/001.jpg" alt="">
                         <h1>Paul Sadou </h1>
                         <p>Web Designer</p>
                     </div>
-                    <ul>
+                    <ul class="nav-items">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-me.html">About Me</a></li>
                         <li><a href="#">Resume</a></li>
@@ -41,11 +41,11 @@
                     <h2>Paul Sadou</h2>
                     <h3>Frontend-developer</h3>
                     <p>
-                     <u>Age:</u> 35 <br><br>
-                     <u>E-mail:</u> paulsadou0@gmail.com <br><br>
-                     <u>Address:</u> Mongo/Tchad <br><br>
-                     <u>Phone:</u> +235 62 04 16 81 <br><br>
-                     <u>Freelance:</u> Available
+                        <u>Age:</u> 35 <br><br>
+                        <u>E-mail:</u> paulsadou0@gmail.com <br><br>
+                        <u>Address:</u> Mongo/Tchad <br><br>
+                        <u>Phone:</u> +235 62 04 16 81 <br><br>
+                        <u>Freelance:</u> Available
                     </p>
                 </div>
             </div>
