--- a/about-me.html
+++ b/about-me.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link rel="stylesheet" href="/assets/css/about-me.css">
+    <title>Projet/html/css/portfolio</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,12 +16,12 @@
         <div class="general-framework">
             <div class="aside">
                 <nav>
-                    <div class="image">
+                    <div class="slider-nav">
                         <img src="/assets/images/001.jpg" alt="">
                         <h1>Paul Sadou </h1>
                         <p>Web Designer</p>
                     </div>
-                    <ul>
+                    <ul class="nav-items">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-me.html">About Me</a></li>
                         <li><a href="#">Resume</a></li>
@@ -37,72 +37,65 @@
                 </nav>
             </div>
             <div class="about-me">
-                <div class="about-me-about">
-
-                    <header>
-                        <div class="header-title">
-                            <h1>About Me</h1>
-                            <p>Artist, Thinker, Creative Doer</p>
-                        </div>
-                    </header>
-                    <div class="web-develoepr-designer">
-                        <div class="web-develoepr-designer-title">
-                            <h1>I am Web Developer/Designer @ <br>Company</h1>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, minus enim totam,
-                                repellat
-                                modi ipsam adipisci quaerat et, consequuntur quod nisi. Aliquam mollitia magnam
-                                consequatur
-                                accusamus iste, dignissimos assumenda adipisci.
-                                Voluptates temporibus ipsam eum deserunt ad ex, eligendi mollitia vero saepe, beatae
-                                autem
-                                quas non numquam iste illo nostrum asperiores dolor dolore, labore dolorum eius animi
-                                excepturi eveniet iure. Provident.</p>
+                <div class="about-content">
+                    <div class="about-title">
+                        <header>
+                            <h2>About Me</h2>
+                        </header>
+                        <p>Artist, Thinker, Creative Doer</p>
+                    </div>
+                    <div class="web-developer">
+                        <div class="web-developer-designer">
+                            <h3>I am Web Design/Developer @ Company.com</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis quos inventore
+                                voluptatem at! Inventore, possimus tempora ratione veritatis velit voluptate
+                                consequuntur temporibus, fugit eaque saepe iste dolor magnam animi facilis?
+                                Sit soluta qui voluptate. Corrupti laudantium optio nam architecto ab officia
+                                cupiditate, hic, laboriosam maxime similique quos unde, rerum temporibus. Beatae veniam,
+                                placeat neque minima impedit odit perspiciatis necessitatibus quam!
+                                Sit soluta qui voluptate. Corrupti laudantium optio nam architecto ab officia
+                                cupiditate, hic, laboriosam maxime similique quos unde, rerum temporibus. Beatae veniam,
+                                placeat neque minima impedit odit perspiciatis necessitatibus quam!
+                                Beatae veniam, placeat neque minima impedit odit perspiciatis necessitatibus quam!
+                            </p>
                         </div>
                         <div class="testimonial">
-                            <h1><u>Testimonial</u> </h1>
+                            <h4><u>Testimonial</u></h4>
                             <div class="paragraphe">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque adipisci nemo odit
-                                    expedita, deserunt aspernatur ea deleniti placeat qui,
-                                    ?</p>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto praesentium ab quos
+                                    optio rem qui maxime iure suscipit repudiandae. Maxime animi optio vitae ad modi
+                                    nobis rem soluta fuga.</p>
                             </div>
-                        </div>
-                    </div>
-                    <div class="bars-testimonial">
-                        <img src="/assets/images/testimonial2.png" alt="">
-                        <p>Bryan Morris <br><span>SUN FOODS</span></p>
-                        <div class="image">
-                            <i class="fa-solid fa-angle-left"></i>
-                            <i class="fa-solid fa-angle-right"></i>
+                            <img src="/assets/images/testimonial2.png" alt="">
+                            <p>Morris Bryan <br> <span>SUN FOODS</span></p>
+                            <div class="defile">
+                                <i class="fa-solid fa-chevron-left"></i>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="services">
+                        <h5><u>Service</u></h5>
                         <div class="services-line">
-                            <div class="images-services">
-                                <h1><u>Service</u></h1>
+                            <div class="services-line-item">
                                 <img src="/assets/images/Service1.png" alt="">
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            </div>
+                            <div class="services-line-item">
                                 <img src="/assets/images/Service2.png" alt="">
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            </div>
+                            <div class="services-line-item">
                                 <img src="/assets/images/Service3.png" alt="">
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            </div>
+                            <div class="services-line-item">
                                 <img src="/assets/images/Service4.png" alt="">
-                            </div>
-                            <div class="services-title">
-                                <h3>Web Design</h3>
-                                <h3>Copywrite</h3>
-                                <h3>E-commerce</h3>
-                                <h3>Management</h3>
-                            </div>
-                            <div class="services-paragraphe">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                </p>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                </p>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                </p>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                </p>
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
                             </div>
                         </div>
                     </div>
