--- a/about-me.html
+++ b/about-me.html
@@ -38,14 +38,14 @@
             </div>
             <div class="about-me">
                 <div class="about-content">
-                    <div class="about-title">
+                    <div class="about-title flex">
                         <header>
                             <h2>About Me</h2>
                         </header>
                         <p>Artist, Thinker, Creative Doer</p>
                     </div>
-                    <div class="web-developer">
-                        <div class="web-developer-designer">
+                    <div class="web-developer flex gap-30 ">
+                        <div class="web-developer-designer flex-center ">
                             <h3>I am Web Design/Developer @ Company.com</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis quos inventore
                                 voluptatem at! Inventore, possimus tempora ratione veritatis velit voluptate
@@ -59,15 +59,15 @@
                                 Beatae veniam, placeat neque minima impedit odit perspiciatis necessitatibus quam!
                             </p>
                         </div>
-                        <div class="testimonial">
+                        <div class="testimonial m-20">
                             <h4><u>Testimonial</u></h4>
-                            <div class="paragraphe">
+                            <div class="paragraphe text-center">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto praesentium ab quos
                                     optio rem qui maxime iure suscipit repudiandae. Maxime animi optio vitae ad modi
                                     nobis rem soluta fuga.</p>
                             </div>
                             <img src="/assets/images/testimonial2.png" alt="">
-                            <p>Morris Bryan <br> <span>SUN FOODS</span></p>
+                            <p>Morris Bryan <br> <span>SUN/FOODS</span></p>
                             <div class="defile">
                                 <i class="fa-solid fa-chevron-left"></i>
                                 <i class="fa-solid fa-chevron-right"></i>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="services">
                         <h5><u>Service</u></h5>
-                        <div class="services-line">
+                        <div class="services-line flex">
                             <div class="services-line-item">
                                 <img src="/assets/images/Service1.png" alt="">
                                 <h6>Web Designer</h6>
@@ -97,6 +97,133 @@
                                 <h6>Web Designer</h6>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projet/html/css/portfolio</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+    <div class="container-suite">
+        <div class="general-framework">
+            <div class="aside">
+                <nav>
+                    <div class="slider-nav">
+                        <img src="/assets/images/001.jpg" alt="">
+                        <h1>Paul Sadou </h1>
+                        <p>Web Designer</p>
+                    </div>
+                    <ul class="nav-items">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about-me.html">About Me</a></li>
+                        <li><a href="#">Resume</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                    <div class="icons-social">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-google-plus-g"></i>
+                    </div>
+                    <div class="navbar"></div>
+                </nav>
+            </div>
+            <div class="about-me">
+                <div class="about-content">
+                    <div class="services">
+                        <h5><u>Service</u></h5>
+                        <div class="services-line flex">
+                            <div class="services-line-item">
+                                <img src="/assets/images/Service1.png" alt="">
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            </div>
+                            <div class="services-line-item">
+                                <img src="/assets/images/Service2.png" alt="">
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            </div>
+                            <div class="services-line-item">
+                                <img src="/assets/images/Service3.png" alt="">
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            </div>
+                            <div class="services-line-item">
+                                <img src="/assets/images/Service4.png" alt="">
+                                <h6>Web Designer</h6>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-clients">
+                        <h1><u>Clients</u></h1>
+                        <div class="services-clients-line flex">
+
+                            <div class="service-clients-items flex-1">
+                                <img src="/assets/images/clients_1.png" alt="">
+                            </div>
+                            <div class="service-clients-items flex-1">
+                                <img src="/assets/images/clients_2.png" alt="">
+                            </div>
+                            <div class="service-clients-items flex-1">
+                                <img src="/assets/images/clients_3.png" alt="">
+                            </div>
+                            <div class="service-clients-items flex-1">
+                                <img src="/assets/images/clients_4.png" alt="">
+                            </div>
+                            <div class="service-clients-items flex-1">
+                                <img src="/assets/images/clients_5.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clients-happy">
+                    <h2><u>Fun Facts</u></h2>
+                    <div class="clients-line flex">
+                        <div class="clients-item flex-1">
+                            <div class="background">
+                                <img src="/assets/images/1_Happy-Clients.png" height="50" alt="">
+                                <p>Clients Happy <br> <span>1,024</span></p>
+                            </div>
+
+                        </div>
+                        <div class="clients-item flex-1">
+                            <div class="background">
+                                <img src="/assets/images/2_Working Hour.png" height="50" alt="">
+                                <p>Working Hours <br> <span>6,256</span></p>
+                            </div>
+
+                        </div>
+                        <div class="clients-item flex-1">
+                            <div class="background">
+                                <img src="/assets/images/3_Awords Won.png" height="50" alt="">
+                                <p>Aword Won <br> <span>21</span></p>
+                            </div>
+
+                        </div>
+                        <div class="clients-item flex-1">
+                            <div class="background">
+                                <img src="/assets/images/4_Coffee Consumed.png" height="50" alt="">
+                                <p>Coffee Consumed <br> <span>20,000</span></p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
