--- a/about-me.html
+++ b/about-me.html
@@ -19,14 +19,14 @@
                     <div class="slider-nav">
                         <img src="/assets/images/003.jpg" alt="">
                         <h1>Paul Sadou </h1>
-                        <p>Web Designer</p>
+                        <p><span>Web Designer</span></p>
                     </div>
                     <ul class="nav-items">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-me.html">About Me</a></li>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/about-me.html">About Me</a></li>
+                        <li><a href="/resume.html">Resume</a></li>
+                        <li><a href="/portfolio.html">Portfolio</a></li>
+                        <li><a href="/contact.html">Contact</a></li>
                     </ul>
                     <div class="icons-social">
                         <i class="fa-brands fa-twitter"></i>
@@ -43,6 +43,7 @@
                         <div class="slider">
                             <h1>About-Me</h1>
                         </div>
+                        <div class="slider-1"></div>
                         <p>Artist, Think, Creative Doer</p>
                     </div>
                     <div class="web-designer flex gap-30 m-10">
@@ -80,134 +81,142 @@
                     </div>
                     <div class="services m-10">
                         <h4><u>Services</u></h4>
-                        <div class="services-line flex m-10">
+                        <div class="services-line-1 flex">
 
-                            <div class="services-line-items">
+                            <div class="services-line-item-1">
+                                <img src="/assets/images/Service1.png" height="60" alt="">
+                                <h5>We Designer</h5>
+                                <p class="text-justy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
+                            </div>
+                            <div class="services-line-item-1">
+                                <img src="/assets/images/Service2.png" height="60" alt="">
+                                <h5>Copywriter</h5>
+                                <p class="text-justy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
+                            </div>
+                            <div class="services-line-item-1">
+                                <img src="/assets/images/Service3.png" height="60" alt="">
+                                <h5>E-commerce</h5>
+                                <p class="text-justy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
+                            </div>
+                            <div class="services-line-item-1">
+                                <img src="/assets/images/Service4.png" height="60" alt="">
+                                <h5>Management</h5>
+                                <p class="text-justy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- CONTAINER-2 -->
+    <div class="container-2">
+
+        <div class="container-suite">
+            <div class="general-framework">
+                <div class="aside">
+                    <nav>
+                        <div class="slider-nav">
+                            <img src="/assets/images/003.jpg" alt="">
+                            <h1>Paul Sadou </h1>
+                            <p>Web Designer</p>
+                        </div>
+                        <ul class="nav-items">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Me</a></li>
+                            <li><a href="#">Resume</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                        <div class="icons-social">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </div>
+                        <div class="navbar"></div>
+                    </nav>
+                </div>
+                <div class="about-me-suite">
+                    <div class="services m-10">
+                        <h4><u>Services</u></h4>
+                        <div class="services-line-2 flex m-10 flex-center-h">
+                            <div class="services-line-item-2">
                                 <img src="/assets/images/Service1.png" height="60" alt="">
                                 <h5>We Designer</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
-                            <div class="services-line-items">
+                            <div class="services-line-item-2">
                                 <img src="/assets/images/Service2.png" height="60" alt="">
                                 <h5>Copywriter</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
-                            <div class="services-line-items">
+                            <div class="services-line-item-2">
                                 <img src="/assets/images/Service3.png" height="60" alt="">
                                 <h5>E-commerce</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
-                            <div class="services-line-items">
+                            <div class="services-line-item-2">
                                 <img src="/assets/images/Service4.png" height="60" alt="">
                                 <h5>Management</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-                    <!-- CONTAINER-2 -->
-<div class="container-2">
+                    <div class="clients m-10">
+                        <h6><u>clients</u></h6>
+                        <div class="clients-line flex flex-center-h">
+                            <div class="clients-line-item flex-1">
+                                <img src="/assets/images/clients_1.png" height="60" alt="">
+                            </div>
+                            <div class="clients-line-item flex-1">
+                                <img src="/assets/images/clients_2.png" height="60" alt="">
+                            </div>
+                            <div class="clients-line-item flex-1">
+                                <img src="/assets/images/clients_3.png" height="60" alt="">
+                            </div>
+                            <div class="clients-line-item flex-1">
+                                <img src="/assets/images/clients_4.png" height="60" alt="">
+                            </div>
+                            <div class="clients-line-item flex-1">
+                                <img src="/assets/images/clients_5.png" height="60" alt="">
+                            </div>
+                            <div class="clients-line-item flex-1">
+                                <img src="/assets/images/clients_6.png" height="60" alt="">
+                            </div>
+                        </div>
+                    </div>
 
-    <div class="container-suite">
-        <div class="general-framework">
-            <div class="aside">
-                <nav>
-                    <div class="slider-nav">
-                        <img src="/assets/images/003.jpg" alt="">
-                        <h1>Paul Sadou </h1>
-                        <p>Web Designer</p>
-                    </div>
-                    <ul class="nav-items">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-me.html">About Me</a></li>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                    <div class="icons-social">
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-google-plus-g"></i>
-                    </div>
-                    <div class="navbar"></div>
-                </nav>
-            </div>
-            <div class="about-me-suite">
-                <div class="services m-10">
-                    <h4><u>Services</u></h4>
-                    <div class="services-line flex m-10 flex-center-h">
-                        <div class="services-line-items flex-1">
-                            <img src="/assets/images/Service1.png" height="60" alt="">
-                            <h5>We Designer</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
-                        </div>
-                        <div class="services-line-items flex-1">
-                            <img src="/assets/images/Service2.png" height="60" alt="">
-                            <h5>Copywriter</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
-                        </div>
-                        <div class="services-line-items flex-1">
-                            <img src="/assets/images/Service3.png" height="60" alt="">
-                            <h5>E-commerce</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
-                        </div>
-                        <div class="services-line-items flex-1">
-                            <img src="/assets/images/Service4.png" height="60" alt="">
-                            <h5>Management</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque eveniet !</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="clients m-10">
-                    <h6><u>clients</u></h6>
-                    <div class="clients-line flex m-10 flex-center-h">
-                        <div class="clients-line-items flex-1">
-                            <img src="/assets/images/clients_1.png" height="60" alt="">
-                        </div>
-                        <div class="clients-line-items flex-1">
-                            <img src="/assets/images/clients_2.png" height="60" alt="">
-                        </div>
-                        <div class="clients-line-items flex-1">
-                            <img src="/assets/images/clients_3.png" height="60" alt="">
-                        </div>
-                        <div class="clients-line-items flex-1">
-                            <img src="/assets/images/clients_4.png" height="60" alt="">
-                        </div>
-                        <div class="clients-line-items flex-1">
-                            <img src="/assets/images/clients_5.png" height="60" alt="">
-                        </div>
-                        <div class="clients-line-items flex-1">
-                            <img src="/assets/images/clients_6.png" height="60" alt="">
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="fun-facts m-10">
-                    <h6><u>Fun facts</u></h6>
-                    <div class="fun-facts-line flex m-10 flex-center-h">
-                        <div class="fun-facts-line-items flex-1">
-                            <img src="/assets/images/1_Happy-Clients.png" height="60" alt="">
-                        </div>
-                        <div class="fun-facts-line-items flex-1">
-                            <img src="/assets/images/2_Working Hour.png" height="60" alt="">
-                        </div>
-                        <div class="fun-facts-line-items flex-1">
-                            <img src="/assets/images/3_Awords Won.png" height="60" alt="">
-                        </div>
-                        <div class="fun-facts-line-items flex-1">
-                            <img src="/assets/images/4_Coffee Consumed.png" height="60" alt="">
+                    <div class="fun-facts m-10">
+                        <h6><u>Fun facts</u></h6>
+                        <div class="fun-facts-line flex m-10 gap-40">
+                            <div class="fun-facts-line-item flex-1">
+                                <img src="/assets/images/1_Happy-Clients.png" height="60" alt="">
+                                <p class="text-center">Happy Clients</p>       
+                                <p>1,024</p>       
+                            </div>
+                            <div class="fun-facts-line-item flex-1">
+                                <img src="/assets/images/2_Working Hour.png" height="60" alt="">
+                                <p>Working Hours</p>
+                                <p>6,256</p>
+                            </div>
+                            <div class="fun-facts-line-item flex-1">
+                                <img src="/assets/images/3_Awords Won.png" height="60" alt="">
+                                <p>Awards Won</p>
+                                <p>21</p>
+                            </div>
+                            <div class="fun-facts-line-item flex-1">
+                                <img src="/assets/images/4_Coffee Consumed.png" height="60" alt=""> 
+                                <p>Coffee Consumed</p>           
+                                <p>20,000</p>           
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
 </body>
