--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet/html/css/portfolio</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -17,16 +18,17 @@
             <div class="aside">
                 <nav>
                     <div class="slider-nav">
+
                         <img src="/assets/images/003.jpg" alt="">
                         <h1>Paul Sadou </h1>
                         <p>Web Designer</p>
                     </div>
                     <ul class="nav-items">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-me.html">About Me</a></li>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                       <li><a href="/index.html">Home</a></li>
+                       <li><a href="about-me.html">About-Me</a></li>
+                       <li><a href="resume.html">Resume</a></li>
+                       <li><a href="portfolio.html">Portfolio</a></li>
+                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <div class="icons-social">
                         <i class="fa-brands fa-twitter"></i>
@@ -52,5 +54,3 @@
         </div>
     </div>
 </body>
-
-</html>
