resume and contact

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <u>Age:</u> 35 <br><br>
                         <u>E-mail:</u> paulsadou0@gmail.com <br><br>
                         <u>Address:</u> Mongo/Tchad <br><br>
-                        <u>Phone:</u> +235 62 04 16 81 <br><br>
+                        <u>Phone:</u> (+235) 62 04 16 81 <br><br>
                         <u>Freelance:</u> Available
                     </p>
                 </div>
@@ -54,3 +54,4 @@
         </div>
     </div>
 </body>
+</html>
