--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
                 <div class="about-me-content">
                     <div class="about-title flex gap-10">
                         <div class="slider">
-                            <h1>About-Me</h1>
+                            <h1>Resume</h1>
                         </div>
                         <p> 6 years of Experience</p>
                     </div>
@@ -121,7 +121,6 @@
 
                             <label for="file">Print Design </label>
                             <progress id="file" max="100" value="45">45%</progress>
-
                         </div>
                         <div class="mycv-items-2">
                             <h1><u>Coding Skills</u></h1>
