--- a/index.html
+++ b/index.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet/html/css/portfolio</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
     <div class="container">
         <div class="general-framework">
             <div class="aside">
                 <nav>
                     <div class="slider-nav">
-
-                        <img src="/assets/images/003.jpg" alt="">
+                        <img src="/assets/images/003.jpg" alt="Moi">
                         <h1>Paul Sadou </h1>
                         <p>Web Designer</p>
                     </div>
                     <ul class="nav-items">
-                       <li><a href="/index.html">Home</a></li>
-                       <li><a href="about-me.html">About-Me</a></li>
-                       <li><a href="resume.html">Resume</a></li>
-                       <li><a href="portfolio.html">Portfolio</a></li>
-                       <li><a href="contact.html">Contact</a></li>
+                       <li><a href="./index.html">Home</a></li>
+                       <li><a href="/pages/about-me.html">About-Me</a></li>
+                       <li><a href="/pages/resume.html">Resume</a></li>
+                       <li><a href="/pages/portfolio.html">Portfolio</a></li>
+                       <li><a href="/pages/contact.html">Contact</a></li>
                     </ul>
                     <div class="icons-social">
                         <i class="fa-brands fa-twitter"></i>
                         <i class="fa-brands fa-facebook-f"></i>
                         <i class="fa-brands fa-google-plus-g"></i>
                     </div>
-                    <div class="navbar"></div>
                 </nav>
             </div>
             <div class="home">
